# revenue-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements-sf-lock.txt
data/: ipca_sgs433.csv
data/forecasts/: covid_regime.txt  cv_all.csv  extended_log.txt  outlier_screen.txt  params_full.csv  run_meta.json  sarima_var.csv
notebooks/: 01_data_collection.ipynb  02_data_processing.ipynb  03_models.ipynb  04_evaluation.ipynb
scripts/: build_tex_artifacts.py  run_pipeline.py
src/forecasting/: __init__.py  benchmarks.py  config.py  eda.py  evaluation.py  generalization.py  io.py  model_reports.py  models.py  plotting.py
tests/: test_core.py  test_forecast_and_fitters.py  test_rolling_origin.py
